# Flint

./: AGENTS.md  ARCHITECTURE.md  Cargo.toml  LICENSE-APACHE  README.md  ROADMAP.md  build.sh  build_manifest.yml  install_standalone.sh
.github/workflows/: ci.yml  test.yml
src/: config.rs  lib.rs  log.rs  main.rs  types.rs
src/bundle/: mod.rs
src/chunks/: hash.rs  mod.rs  network.rs  tree.rs  utils.rs
src/commands/: bundle.rs  main.rs  mod.rs  repo.rs
src/crypto/: key.rs  mod.rs  signing.rs
src/installer/: mod.rs
src/packager/: Cargo.toml
src/packager/src/: lib.rs  main.rs  packager.rs
src/repo/: io.rs  manifest.rs  manifest_io.rs  mod.rs  network.rs  types.rs  versions.rs
src/run/: mod.rs  quicklaunch.rs
src/types/: Cargo.toml
src/types/src/: lib.rs
src/utils/: config.rs  mod.rs
tests/: full_workflow.rs
