[package]
name = "flintpkg"
version = "0.1.1"
description = "The universal package manager"
license = "MIT OR Apache-2.0"
repository = "https://github.com/TimelessOS/Flint"
keywords = ["cli", "package-manager", "installer", "software-delivery"]
categories = ["command-line-utilities"]
edition = "2024"
default-run = "flint"

[dependencies]
anyhow = "1.0.99"
blake3 = { version = "1.8.2", features = ["digest"] }
clap = { version = "4.5.47", features = ["derive"] }
comfy-table = "7.2.1"
directories = "6.0.0"
ed25519-dalek = { version = "=3.0.0-pre.1", features = [
    "pem",
    "pkcs8",
    "rand_core",
    "signature",
] }
rand_core = { version = "0.9.3", features = ["os_rng"] }
reqwest = { version = "0.12.23", optional = true, default-features = false, features = [
    "http2",
    "rustls-tls",
    "gzip",
    "brotli",
    "system-proxy",
] }
serde = { version = "1.0.223", features = ["derive"] }
serde_yaml = "0.9.34"
tar = "0.4.44"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
temp-dir = "0.1.16"
walkdir = "2.5.0"
dialoguer = { version = "0.12.0" }
flate2 = { version = "1.1.2", optional = true }
console = { version = "0.16.1", default-features = false, features = [
    "ansi-parsing",
    "std",
    "windows-console-colors",
] }
futures-util = "0.3.31"
filetime = "0.2.26"
liblzma = { version = "0.4.4", features = ["static"] }
bzip2 = { version = "0.6.0", features = ["static"] }

[dev-dependencies]
httpmock = "0.7.0"

[features]
network = ["dep:reqwest", "dep:flate2"]

[[bin]]
name = "flint"
path = "src/main.rs"

[lints.rust]
unsafe_code = "forbid"
unused_imports = "deny"

[lints.clippy]
all = "deny"
correctness = "deny"
suspicious = "deny"
perf = "deny"
complexity = "deny"
style = "warn"
# cargo = "deny" # Temporarily disabled because we use a prerelease version of ed25519, and blake3 is not using the same deps.
pedantic = "warn"
nursery = "warn"

[profile.release]
lto = true
